Update self-hosting docs