@@ -20,24 +20,26 @@ this bot, it can be self-hosted without any issues in one of the following ways.
 - A running instance of [Minio Cloud Storage](https://www.minio.io/)
   - Using Minio allows you to use whatever cloud storage solution you want (or none), but you'll need:
     - Bucket Name
+      - **Make sure the bucket you choose for `DS_BUCKET` exists**
     - Access Key _(may be optional if your store does not require it)_
     - Secret Key _(may be optional if your store does not require it)_
 
 ## Local (or VPS)
 
 These instructions are for those who want to run the bot either on their computer or on a server, for this you'll need to
-have [install Java 9+ JRE](http://www.oracle.com/technetwork/java/javase/downloads/index.html).
+have [install Java 11+](https://adoptopenjdk.net/).
 
 - Download the [latest release](https://github.com/guacamoledragon/throw-voice/releases) of the bot and extract it,
-  you're looking for `throw-voice-<version>-release.zip`.
+  you're looking for `throw-voice-<version>.zip`.
 
 - Configure Bot
   - Windows Users:
     - Edit `start.bat` and enter the appropriate values for all the variables described under [environment variables](./environment-variables.md).
     - Save `start.bat`, start bot by double-click'ing `start.bat`
-  - Linux Users:
-    - Drop down to a shell and set all the variables described under [environment variables](./environment-variables.md).
-    - Start bot by running: `java -Xmx512m --add-modules java.xml.bind -cp 'throw-voice-<version>.jar:lib\*' tech.gdragon.App`
+  - Linux/macOS Users:
+    - Edit `start.sh` and enter the appropriate values for all the variables described under [environment variables](./environment-variables.md).
+    - Save `start.sh`, start bot by double-click'ing `start.sh`
+      - If you don't have a GUI, then drop to a terminal and execute `start.sh`
 
 - Navigate to `http://localhost:<PORT>` to add the bot to your Guild. 
 
@@ -47,12 +49,9 @@ _Note: If you're deploying on your own VPS, then you'll need a bit more setup as
 
 ## Docker
 
-If Docker is your jam, the easiest thing to do is to create a `.env` file with all the variables described under
-[environment variables](./environment-variables.md). Then:
+If Docker is your jam, the easiest thing to do is to modify the `.env` file included with only the variables already included,
+for reference see [environment variables](./environment-variables.md). Then use [`docker-compose`](https://docs.docker.com/compose/):
 
-    docker run -it --env-file .env --env JAVA_OPTS="-Xmx512m --add-modules java.xml.bind" -p <PORT>:<PORT> gdragon/throw-voice:<version>
+    docker-compose up # optionally, --detach
 
-This repo also contains a [`docker-compose.yml`](../docker-compose.yml) that can be used if desired, but it's mostly used
-for my deployment purposes.
-
-See the [Docker Hub](https://hub.docker.com/r/gdragon/throw-voice/) registry for more details on the container.
+This will start both the bot and minio, and that's really all there is.
